fixed alignment

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,11 @@
         "wdth" 100;
 }
 
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
 nav {
     display: flex;
     align-items: center;
@@ -190,7 +195,7 @@ footer input[type="text"], footer input[type="email"], footer textarea{
     height: 64px;
     border-radius: 5px;
     background-color: white;
-    width: 100%;
+    width: 85%;
     padding: 10px 20px;
     margin-bottom: 24px;
     border: none;
